changed logo and icon to already cropped round png made some minor improvements to the header (fixed height to 50px, cuz for some unapparent reason it insisted on being 56.6666px high)

--- a/styles/style.less
+++ b/styles/style.less
@@ -114,14 +114,18 @@ button:active {
 //-------------------- Header --------------------\\
 
 header {
-    
+    height: 50px;
+    box-sizing: content-box;
+}
+
+header > a {
+    display: inline-block;
 }
 
 .header__logo {
     float: left;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
     margin-right: 15px;
 }
 
